--- a/templates/admin/admin_login.html
+++ b/templates/admin/admin_login.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-{{$static := .static_url}}
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Login Page">
-    {{template "admin_head" $static}}
+    {{template "admin_head" $.static_url}}
     <title>KORM - Admin Login</title>
 </head>
-
-{{$admin_path := .admin_path}}
-
 <body>
     {{ template "admin_nav" . }}
     <div class="login-wrapper">
@@ -44,7 +39,7 @@
 
 
     <script>
-        var admin_path = "{{$admin_path}}";
+        var admin_path = "{{$.admin_path}}";
     </script>
-    <script src="{{$static}}/admin/login.js"></script>
+    <script src="{{$.static_url}}/admin/login.js"></script>
     {{template "pwa"}}
