--- a/templates/admin/admin_index.html
+++ b/templates/admin/admin_index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-{{$static := .static_url}}
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Website Admin Page">
-  {{template "admin_head" $static}}
+  {{template "admin_head" $.static_url}}
   <title>Admin</title>
 </head>
-
-{{$admin_path := .admin_path}}
 <body>
 {{ template "admin_nav" . }}
 <div class="wrapper giffed">
@@ -20,21 +17,20 @@
       <div class="card">
         <div class="card-body">
           <h2 class="card-title">{{.}}</h2>
-          <a href="{{$admin_path}}/table/{{.}}" class="btn-left">All</a>
+          <a href="{{$.admin_path}}/table/{{.}}" class="btn-left">All</a>
           <button data-table="{{.}}" class="btn-right">Drop</button>
         </div>
       </div>
     {{end}}
   </div>
-  
 </div>
 
 
  
 <script>
-  let admin_path="{{$admin_path}}";
+  let admin_path="{{$.admin_path}}";
 </script>
-<script src="{{$static}}/admin/admin_index.js"></script>
+<script src="{{$.static_url}}/admin/admin_index.js"></script>
 {{template "pwa"}}
 </body>
 </html>
