--- a/templates/admin/admin_all_models.html
+++ b/templates/admin/admin_all_models.html
@@ -280,6 +280,8 @@
     tippy("[data-tippy-content]", {
       arrow: true,
       allowHTML: true,
+      zIndex: 9999,
+      placement: 'right-start',
       interactive: true
     });
     var pk = "{{$.pk}}"
